--- a/public/index.html
+++ b/public/index.html
@@ -26,9 +26,14 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body
+    class="text-gray-600 font-body font-semibold min-h-screen flex flex-col"
+  >
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div
+      id="root"
+      class="grid grid-cols-1 md:grid-cols-12 shadow-2xl flex-grow"
+    ></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
