Fixing css class and configured sidebar component and its child component

--- a/public/index.html
+++ b/public/index.html
@@ -30,10 +30,7 @@
     class="text-gray-600 font-body font-semibold min-h-screen flex flex-col"
   >
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div
-      id="root"
-      class="grid grid-cols-1 md:grid-cols-12 shadow-2xl flex-grow"
-    ></div>
+    <div id="root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
