--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,9 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body
+    class="text-gray-600 font-body font-semibold min-h-screen flex flex-col"
+  >
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
